update attack on dp-cgans

--- a/src/attack_dpcgans.ipynb
+++ b/src/attack_dpcgans.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,12 @@
     "import os \n",
     "import tapas.datasets\n",
     "import tapas.generators\n",
-    "import json I do not unde\n"
+    "import json \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "4          2824              76  United-States   >50K  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "array([177119, 216481, 256263, ...,  45317, 215862, 186925])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,17 +254,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_description = tapas.datasets.DataDescription(schema=data_schema)\n",
-    "data = tapas.datasets.TabularDataset(data=df, description=data_description)"
+    "data_description = tapas.datasets.DataDescription(schema=data_schema)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = tapas.datasets.TabularDataset(data=df, description=data_description)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we need to separate the target record from the original data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attack_id = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_record = data.get_records([attack_id])\n",
+    "data.drop_records([attack_id], in_place=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert data.data.shape[0] + 1 == df.shape[0], \"data does not contain 1 record less than original df\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,36 +317,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "synthetic_data = generator.generate(2000)"
+    "training_data_set_size = 9\n",
+    "specific_data = data.sample(n_samples=training_data_set_size)\n",
+    "synthetic_dataset_size = 10"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run an attack"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "import tapas.datasets\n",
-    "import tapas.generators\n",
-    "import tapas.threat_models\n",
-    "import tapas.attacks\n",
-    "import tapas.report"
+    "### New approach to the generator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,192 +348,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_knowledge = tapas.threat_models.AuxiliaryDataKnowledge(\n",
+    "data_knowledge = tapas.threat_models.AuxiliaryDataKnowledge( # see the source code and the paper: there can be exact knowledge, and auxiliary knowledge \n",
     "      data,\n",
     "      auxiliary_split=0.5,\n",
-    "      num_training_records=5000\n",
-    ")\n",
-    "sdg_knowledge = tapas.threat_models.BlackBoxKnowledge(\n",
-    "    generator,\n",
-    "    num_synthetic_records=5000,\n",
+    "      num_training_records=1000\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "threat_model = tapas.threat_models.TargetedMIA(\n",
-    "   attacker_knowledge_data=data_knowledge,\n",
-    "   target_record=data.get_records(range(50)),\n",
-    "   attacker_knowledge_generator=sdg_knowledge,\n",
-    "   generate_pairs=True,\n",
-    "   replace_target=True\n",
+    "    attacker_knowledge_data=tapas.threat_models.ExactDataKnowledge(\n",
+    "        specific_data),       \n",
+    "    attacker_knowledge_generator=tapas.threat_models.BlackBoxKnowledge(\n",
+    "            generator, num_synthetic_records=synthetic_dataset_size,\n",
+    "        ),\n",
+    "    target_record=target_record,\n",
+    "    generate_pairs=False,\n",
+    "    replace_target=False\n",
     ")"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Closest distance MIA"
+    "attack = tapas.attacks.ClosestDistanceMIA(criterion=\"accuracy\", label=\"Closest-Distance\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/flavio/repositories/projects/GANS/explore-attacks/.venv/lib/python3.9/site-packages/tapas/report/attack_summary.py:250: RuntimeWarning: invalid value encountered in divide\n",
-      "  return np.log(max(np.max(tp/fp), np.max((1-fp)/(1-tp))))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "attacker = tapas.attacks.ClosestDistanceMIA()\n",
-    "attacker.train(threat_model, num_samples=10)\n",
-    "attack_summary = threat_model.test(attacker, num_samples=100)\n",
-    "metrics = attack_summary.get_metrics()\n"
+    "num_training = 1000\n",
+    "attack.train(threat_model, num_samples=num_training)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attack_summary = threat_model.test(attack, num_samples=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>target_id</th>\n",
-       "      <th>generator</th>\n",
-       "      <th>attack</th>\n",
-       "      <th>accuracy</th>\n",
-       "      <th>true_positive_rate</th>\n",
-       "      <th>false_positive_rate</th>\n",
-       "      <th>mia_advantage</th>\n",
-       "      <th>privacy_gain</th>\n",
-       "      <th>auc</th>\n",
-       "      <th>effective_epsilon</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Unnamed dataset (AUX)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>src/generator_from_dataset.py</td>\n",
-       "      <td>ClosestDistance(Hamming, accuracy)</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                 dataset target_id                      generator  \\\n",
-       "0  Unnamed dataset (AUX)         0  src/generator_from_dataset.py   \n",
-       "\n",
-       "                               attack  accuracy  true_positive_rate  \\\n",
-       "0  ClosestDistance(Hamming, accuracy)       0.5                 0.0   \n",
-       "\n",
-       "   false_positive_rate  mia_advantage  privacy_gain  auc  effective_epsilon  \n",
-       "0                  0.0            0.0           1.0  0.5                0.0  "
+       "array([ -8.,  -5.,  -6.,  -7., -10.,  -6.,  -9.,  -8.,  -9.,  -8.,  -8.,\n",
+       "        -7.,  -7.,  -8.,  -8.,  -6.,  -9.,  -8.,  -7.,  -6.,  -7.,  -8.,\n",
+       "        -8.,  -9.,  -8.,  -8.,  -7.,  -6.,  -5.,  -6.,  -8.,  -7., -10.,\n",
+       "        -7.,  -7.,  -6.,  -8.,  -9.,  -9.,  -8.,  -7.,  -8.,  -6.,  -8.,\n",
+       "       -10.,  -7.,  -8.,  -9.,  -5.,  -8.,  -9.,  -7.,  -7.,  -7.,  -8.,\n",
+       "        -8.,  -8.,  -7.,  -8.,  -5.,  -7.,  -8.,  -7.,  -8.,  -8.,  -9.,\n",
+       "        -9.,  -8.,  -7.,  -9.,  -7.,  -6.,  -5.,  -6., -10.,  -6.,  -5.,\n",
+       "        -5.,  -5.,  -7.,  -9.,  -4.,  -7.,  -8.,  -8.,  -4.,  -7.,  -9.,\n",
+       "        -6.,  -8.,  -7.,  -8.,  -7.,  -8., -10.,  -8.,  -7.,  -8.,  -6.,\n",
+       "        -8.,  -8.,  -7.,  -7.,  -7.,  -9.,  -6.,  -7.,  -4.,  -8.,  -8.,\n",
+       "        -8.,  -9.,  -9.,  -5.,  -8.,  -8.,  -8.,  -9.,  -6.,  -8.,  -9.,\n",
+       "        -8.,  -8.,  -6.,  -9.,  -8.,  -7.,  -9.,  -6.,  -6.,  -9.,  -6.,\n",
+       "        -8.,  -7.,  -7.,  -8.,  -8.,  -8.,  -7.,  -7.,  -8.,  -7.,  -7.,\n",
+       "        -9.,  -8.,  -8.,  -9.,  -8.,  -8.,  -7.,  -7.,  -9.,  -9.,  -8.,\n",
+       "        -8.,  -9.,  -9.,  -8.,  -6.,  -8.,  -7.,  -7.,  -7.,  -8.,  -7.,\n",
+       "        -6.,  -7.,  -9.,  -9.,  -7., -10.,  -6.,  -7.,  -8.,  -6.,  -8.,\n",
+       "        -6.,  -8.,  -7.,  -9.,  -8.,  -8.,  -7.,  -8.,  -8.,  -7.,  -9.,\n",
+       "        -7.,  -7.,  -6.,  -9.,  -8.,  -7.,  -9.,  -8.,  -8.,  -7.,  -6.,\n",
+       "        -8.,  -6.])"
       ]
      },
-     "execution_count": 49,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0,\n",
+       "       0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 1,\n",
+       "       0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 0, 0,\n",
+       "       0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1,\n",
+       "       0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1,\n",
+       "       1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1,\n",
+       "       0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0,\n",
+       "       1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1,\n",
+       "       1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 1, 0,\n",
+       "       0, 1])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0,\n",
+       "       0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0,\n",
+       "       0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0,\n",
+       "       0, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 0,\n",
+       "       1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0,\n",
+       "       0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 1, 0, 1,\n",
+       "       0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0,\n",
+       "       1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1,\n",
+       "       0, 1])"
+      ]
+     },
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metrics.head()"
+    "display(attack_summary.scores) # what do the scores mean? try with smaller samples?\n",
+    "display(len(attack_summary.scores)) # these are the number of samples in the test()\n",
+    "display(attack_summary.labels) # I guess these are the indicators for whether the dataset contains the record or not?\n",
+    "\n",
+    "\n",
+    "type(attack_summary)\n",
+    "attack_summary.predictions # so this explains why the FPR and TPR are 0. How can I change it?"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Local neighborhood attack\n",
-    "\n",
-    "It is important to re-define the threat model; otherwise I think it takes the existing trained model from above."
+    "why do we get all 0s?\n",
+    "- because we do not use the generator properly. -- for this, need to check some functioning code (try one of their examples)\n",
+    "- because we are too strict (threshold too high/low) -- but should this threshold not be learned in training?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "threat_model = tapas.threat_models.TargetedMIA(\n",
-    "   attacker_knowledge_data=data_knowledge,\n",
-    "   target_record=data.get_records(range(50)),\n",
-    "   attacker_knowledge_generator=sdg_knowledge,\n",
-    "   generate_pairs=True,\n",
-    "   replace_target=True\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/flavio/repositories/projects/GANS/explore-attacks/.venv/lib/python3.9/site-packages/tapas/report/attack_summary.py:250: RuntimeWarning: invalid value encountered in divide\n",
-      "  return np.log(max(np.max(tp/fp), np.max((1-fp)/(1-tp))))\n"
-     ]
-    }
-   ],
-   "source": [
-    "attacker = tapas.attacks.LocalNeighbourhoodAttack()\n",
-    "attacker.train(threat_model, num_samples=10)\n",
-    "attack_summary = threat_model.test(attacker, num_samples=100)\n",
     "metrics = attack_summary.get_metrics()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -541,54 +554,56 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Unnamed dataset (AUX)</td>\n",
+       "      <td>Unnamed dataset (EXACT)</td>\n",
        "      <td>0</td>\n",
        "      <td>src/generator_from_dataset.py</td>\n",
-       "      <td>LocalNeighbourhood(Hamming, 1, accuracy)</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Closest-Distance</td>\n",
+       "      <td>0.475</td>\n",
+       "      <td>0.427083</td>\n",
+       "      <td>0.480769</td>\n",
+       "      <td>-0.053686</td>\n",
+       "      <td>1.053686</td>\n",
+       "      <td>0.45623</td>\n",
+       "      <td>-0.002478</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 dataset target_id                      generator  \\\n",
-       "0  Unnamed dataset (AUX)         0  src/generator_from_dataset.py   \n",
+       "                   dataset target_id                      generator  \\\n",
+       "0  Unnamed dataset (EXACT)         0  src/generator_from_dataset.py   \n",
        "\n",
-       "                                     attack  accuracy  true_positive_rate  \\\n",
-       "0  LocalNeighbourhood(Hamming, 1, accuracy)       0.5                 0.0   \n",
+       "             attack  accuracy  true_positive_rate  false_positive_rate  \\\n",
+       "0  Closest-Distance     0.475            0.427083             0.480769   \n",
        "\n",
-       "   false_positive_rate  mia_advantage  privacy_gain  auc  effective_epsilon  \n",
-       "0                  0.0            0.0           1.0  0.5                0.0  "
+       "   mia_advantage  privacy_gain      auc  effective_epsilon  \n",
+       "0      -0.053686      1.053686  0.45623          -0.002478  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metrics.head()"
+    "metrics"
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It works mechanically, but it is unclear what is going on:\n",
-    "- one row per data set \n",
-    "- TPR, FPR are 0. why?\n",
-    "- does it matter whether the generated data are deterministic when reading from a file? \n",
-    "- difficult to understand the outputs above. need a better understanding\n",
-    "    - of the attacks: how do they work, what do they need, what are their assumptions\n",
-    "    - of the library: understand in more details how the library implements attacks\n"
+    "### Notes\n",
+    "- `attack_score` takes the min distance between the target record and all synthetic datasets in the list `datasets`. \n",
+    "    - so, I need more than one synthetic datasets as inputs?\n",
+    "    - should they stem from the same generator?\n",
+    "    - read some paper on these attacks/need to understand the background better\n"
    ]
   }
  ],
