--- a/src/attack_dpcgans.ipynb
+++ b/src/attack_dpcgans.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,11 +379,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "attack = tapas.attacks.ClosestDistanceMIA(criterion=\"accuracy\", label=\"Closest-Distance\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'target_criterion': 'accuracy',\n",
+       " 'positive_label': None,\n",
+       " 'negative_label': None,\n",
+       " '_threshold': None,\n",
+       " 'distance': <tapas.attacks.distances.HammingDistance at 0x7f8a7ea05640>,\n",
+       " '_label': 'Closest-Distance'}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vars(attack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ClosestDistanceMIA' object has no attribute 'target_value'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdir\u001b[39m(attack)\n\u001b[1;32m      2\u001b[0m attack\u001b[39m.\u001b[39mtarget_criterion\n\u001b[0;32m----> 3\u001b[0m attack\u001b[39m.\u001b[39;49mtarget_value\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ClosestDistanceMIA' object has no attribute 'target_value'"
+     ]
+    }
+   ],
+   "source": [
+    "attack.target_criterion\n",
+    "attack.target_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method train in module tapas.attacks.base_classes:\n",
+      "\n",
+      "train(threat_model: 'LabelInferenceThreatModel', num_samples: 'int' = 100, **attack_score_kwargs) method of tapas.attacks.closest_distance.ClosestDistanceMIA instance\n",
+      "    Train this attack: train the score, then choose a threshold meeting\n",
+      "    the target criterion.\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    threat_model: LabelInferenceThreatModel\n",
+      "        The threat model from which to generate labelled samples.\n",
+      "    num_samples: int (default, 100).\n",
+      "        Number of training samples to generate to select the threshold.\n",
+      "    (optionally), additional keyword arguments, passed to _train_attack_score.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(attack.train)"
    ]
   },
   {
